--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ footer a:hover {
         <p>R.E.P.O</p>
     </section>   
         </a>
-        <a href="https://s3.wifi4games.com/Return.to.Castle.Wolfenstein[wifi4games.com].rar">
+        <a href="https://www.wifi4games.com/pc_games/Return_to_Castle_Wolfenstein.html">
      <section>
         <img src="https://www.wifi4games.com/img/pc_covers/260/k61FQ987oX127.jpg" alt="Return to Castle Wolfenstein">
         <p>Return to Castle Wolfenstein</p>
