--- a/index.html
+++ b/index.html
@@ -537,6 +537,15 @@ footer a:hover {
 });
 
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Mehdaoui Games",
+  "url": "https://achrafmeh.github.io/games/",
+  "logo": "https://achrafmeh.github.io/games/image.png"
+}
+</script>
 
 <script>
   const stars = document.querySelectorAll(".stars-container .star");
