--- a/index.html
+++ b/index.html
@@ -288,6 +288,12 @@ footer a:hover {
         <p>Return to Castle Wolfenstein</p>
      </section>
         </a>
+         <a href="https://www.wifi4games.com/pc_games/Space_Engineers_Warfare_2.html">
+     <section>
+          <img src="https://www.wifi4games.com/img/pc_covers/260/fIpd3zVmB7382.jpg"   alt="Space Engineers Warfare 2">
+          <p>Space Engineers Warfare 2</p>
+     </section>
+         </a>
     </div>
     <h1 id="Intelligence games">Intelligence Games</h1>
     <div class="gtd">
