--- a/index.html
+++ b/index.html
@@ -219,6 +219,12 @@ footer a:hover {
         <p>project cars 2</p>
     </section>        
         </a>
+        <a href="https://www.wifi4games.com/pc_games/Farming_Simulator_25.html">
+    <section>
+         <img src="https://www.wifi4games.com/img/pc_covers/260/DvsscxIEtY758.jpg"  alt="Farming Simulator 25">
+         <p>Farming Simulator 25</p>
+    </section>
+        </a>
     </div>
     <H1 id="Action games">Action Games</H1>
     <div class="gtd">
