--- a/index.html
+++ b/index.html
@@ -225,6 +225,12 @@ footer a:hover {
          <p>Farming Simulator 25</p>
     </section>
         </a>
+        <a href="https://www.wifi4games.com/pc_games/Motel_Manager_Simulator.html">
+    <section>
+         <img src="https://www.wifi4games.com/img/pc_covers/260/DUwBGRZ2yX755.jpg" alt="Motel Manager Simulator">
+         <p>Motel Manager Simulator</p>
+    </section>
+        </a>
     </div>
     <H1 id="Action games">Action Games</H1>
     <div class="gtd">
