--- a/index.html
+++ b/index.html
@@ -229,6 +229,12 @@ footer a:hover {
         <p>Drift Zone</p>
     </section>        
         </a>
+         <a gref="https://www.wifi4games.com/pc_games/attack_on_titan.html">
+    <section>
+         <img src="https://www.wifi4games.com/img/pc_covers/260/3QY8F4ihC5827.jpg" alt="Attack on Titan">
+         <p>Attack on Titan Wings of Freedom</p>
+    </section>
+         </a>
         <a href="https://www.wifi4games.com/pc_games/project_cars_2.html">
     <section>
         <img src="https://www.wifi4games.com/img/pc_covers/260/nWW9vFz7cC691.jpg" alt="project cars 2">
