--- a/index.html
+++ b/index.html
@@ -359,6 +359,12 @@ footer a:hover {
         <p>Pro Evolution Soccer 2015</p>
     </section>        
         </a>
+         <a href="https://www.wifi4games.com/pc_games/NBA_2k17.html">
+    <section>
+         <img src="https://www.wifi4games.com/img/pc_covers/260/zUMcTWRnMa134.jpg" alt="NBA 2K17">
+         <p>NBA 2K17</p>
+    </section>
+         </a>
         <a href="https://www.wifi4games.com/pc_games/Fifa_2014.html">
     <section>
         <img src="https://www.wifi4games.com/img/pc_covers/260/GHMlLCEWQe251.jpg" alt="pes 2024">
