--- a/index.html
+++ b/index.html
@@ -732,5 +732,8 @@ footer a:hover {
     });
   }
 </script>
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9813683040376383"
+   crossorigin="anonymous">
+     </script>
 </body>
 </html>
