--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Abdelmouiz Mehdaoui">
     <link rel="canonical" href="https://achrafmeh.github.io/games/" />
     <link rel="stylesheet" href="style.css">
-    <title>Mehdaoui Games</title>
+    <title>تحميل ألعاب كمبيوتر مجانية | Mehdaoui Games</title>
     <link rel="icon" href="image.png">
   <style>
     
