--- a/index.html
+++ b/index.html
@@ -118,8 +118,46 @@ footer a:hover {
 }
 
   </style>
+   <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Mehdaoui Games",
+  "url": "https://achrafmeh.github.io/games",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://achrafmeh.github.io/games#q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Product",
+  "name": "ألعاب Mehdaoui Games",
+  "image": "https://achrafmeh.github.io/games/image.png",
+  "description": "أفضل ألعاب الكمبيوتر المجانية للعب أونلاين أو تحميلها مباشرة من موقع Mehdaoui Games.",
+  "brand": {
+    "@type": "Brand",
+    "name": "Mehdaoui Games"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.8",
+    "reviewCount": "126"
+  }
+}
+</script>
+
 </head>
 <body>
+     
+<section style="padding: 10px;">
+  <h1>تحميل ألعاب كمبيوتر مجانية 2025</h1>
+  <p>مرحباً بك في <strong>Mehdaoui Games</strong>، موقعك المفضل لتحميل أفضل ألعاب الكمبيوتر المجانية. هنا تجد ألعاب خفيفة، ألعاب بدون تحميل، وألعاب أونلاين يمكنك لعبها مباشرة. كل الألعاب مصنفة، ويمكنك تقييمها وترك تعليقك بكل سهولة!</p>
+</section>
 
 <header class="login-header">
   <div id="user-info" style="display:none">
