--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ footer a:hover {
   <p>
     <a href="privacy.html">سياسة الخصوصية</a> |
     <a href="mailto:mehdaoui.contact@gmail.com">اتصل بنا</a> |
-    <a href="https://facebook.com/achrafmeh" target="_blank">فيسبوك</a>
+    <a href="https://facebook.com/mehdaoui abdelmouiz" target="_blank">فيسبوك</a>
   </p>
 </footer>
 
