--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9813683040376383">
-    <meta name="robots" content="noindex">
+    <meta name="robots" content="index, follow">
     
     <meta name="googlebot" content="index, follow">
     <meta name="description" content="موقع مهداوي عبد المعز لتحميل ألعاب الكمبيوتر مجانا مثل GTA و PES و Blur و Freefire. موقع خفيف وسريع بدون إعلانات مزعجة.">
