--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="google-adsense-account" content="ca-pub-9813683040376383">
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="index, follow">
+    <link rel="canonical" href="https://mehdaouigames.netlify.app/" />
     <meta name="description" content="موقع مهداوي عبد المعز لتحميل ألعاب الكمبيوتر مجانا مثل GTA و PES و Blur و Freefire. موقع خفيف وسريع بدون إعلانات مزعجة.">
     <meta name="keywords" content="العاب, تحميل, مهداوي, GTA, PES, ألعاب مجانية, ألعاب كمبيوتر, wifi4games, games for pc , meh1212mmll">
     <meta name="author" content="Abdelmouiz Mehdaoui">
