--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
      <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9813683040376383">
-    <meta name="robots" content="noindex">
+    <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
-    <link rel="canonical" href="https://mehdaouigames.netlify.app/" />
     <meta name="description" content="موقع مهداوي عبد المعز لتحميل ألعاب الكمبيوتر مجانا مثل GTA و PES و Blur و Freefire. موقع خفيف وسريع بدون إعلانات مزعجة.">
     <meta name="keywords" content="العاب, تحميل, مهداوي, GTA, PES, ألعاب مجانية, ألعاب كمبيوتر, wifi4games, games for pc , meh1212mmll">
     <meta name="author" content="Abdelmouiz Mehdaoui">
     <link rel="stylesheet" href="style.css">
+    <link rel="canonical" href="https://mehdaouigames.netlify.app/" />
     <title>تحميل ألعاب كمبيوتر مجانية | Mehdaoui Games</title>
     <link rel="icon" href="image.png">
   <style>
