--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="العاب, تحميل, مهداوي, GTA, PES, ألعاب مجانية, ألعاب كمبيوتر, wifi4games, games for pc , meh1212mmll">
     <meta name="author" content="Abdelmouiz Mehdaoui">
     <link rel="stylesheet" href="style.css">
-    <link rel="canonical" href="https://mehdaouigames.netlify.app/" />
+    <link rel="canonical" href="https://achrafmeh.github.io/games" />
     <title>تحميل ألعاب كمبيوتر مجانية | Mehdaoui Games</title>
     <link rel="icon" href="image.png">
   <style>
